[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect_sandboxes"
version = "0.1.0"
description = "Collection of sandboxes for Inspect AI"
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT License" }
dependencies = [
    "inspect-ai>=0.3.180",
    "modal>=1.3.3",
    "tenacity>=9.1.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/meridianlabs-ai/inspect_sandboxes"
"Issue Tracker" = "https://github.com/meridianlabs-ai/inspect_sandboxes/issues"
Documentation = "https://meridianlabs-ai.github.io/inspect_sandboxes/"

[project.entry-points.inspect_ai]
inspect_sandboxes = "inspect_sandboxes._registry"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "types-PyYAML",
]

[tool.hatch.build]
only-packages = true
exclude = ["docs/", "tests/"]

[tool.uv]
managed = true
add-bounds = "lower"
default-groups = ["dev"]

[tool.mypy]
ignore_missing_imports = false
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "modal.*"
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
reportUnknownParameterType = true

[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "D212", # multi-line docstring summary should start at the first line
    "D415", # first line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real Modal resources (deselect with '-m \"not integration\"')",
]
